fix to scroll not showing on smaller screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -303,3 +303,14 @@ body {
 }
 
 }
+
+
+/*Media queries - vertical*/
+
+@media only screen and (min-width: 860px) {
+
+	body {
+	overflow: auto;
+}
+
+}
